# python-igraph-ctypes

./: .coveragerc  .gitignore  404.html  README.md  gen.sh  index.html  mise.toml  mkdocs.yml  objects.inv  pyproject.toml  tox.ini
.github/workflows/: docs.yml
api/constructors/: index.html
api/graph/: index.html
api/io/: index.html
api/paths/: index.html
api/types/: index.html
benchmarks/: bench_clique_percolation.py  bench_shortest_path.py
doc/: NOTES.md
doc/fragments/: igraph_create.txt  igraph_empty.txt
docs/: notes.md  reference.md
docs/api/: constructors.md  graph.md  io.md  paths.md  types.md
docs/fragments/: igraph_famous.txt  igraph_full.txt  igraph_write_graph_edgelist.txt  igraph_write_graph_graphml.txt  igraph_write_graph_lgl.txt  igraph_write_graph_ncol.txt
docs/fragments/_include/: write_graph_names.txt  write_graph_outstream.txt  write_graph_weights.txt
notes/: index.html
search/: search_index.json
src/codegen/: functions.yaml  internal_enums.py.in  internal_functions.py.in  internal_lib.py.in  reexport.py.in  run.py  types.yaml
src/igraph_ctypes/: __init__.py  _version.py  constructors.py  conversion.py  enums.py  errors.py  graph.py  io.py  paths.py  types.py  vertexset.py
src/igraph_ctypes/_internal/: attributes.py  conversion.py  enums.py  errors.py  functions.py  lib.py  metamagic.py  refcount.py  rng.py  setup.py  types.py  utils.py  wrappers.py
src/igraph_ctypes/_internal/attributes/: __init__.py  combinations.py  enums.py  handler.py  map.py  storage.py  utils.py  value_list.py
test/: test_basic_interface.py  test_constructors.py  test_conversion.py  test_misc.py
tests/: test_attribute_utils.py  test_attribute_value_list.py  test_basic_interface.py  test_constructors.py  test_conversion.py  test_edge_attributes.py  test_graph_attributes.py  test_misc.py  test_paths.py  test_properties.py  test_utils.py  test_vertex_attributes.py  test_write_graph.py
tests/test_write_graph/: graph_with_attributes.graphml  graph_with_attributes.lgl  graph_with_attributes.ncol  simple_graph.graphml  simple_graph.lgl  simple_graph.ncol  simple_graph.txt
