[tool.poetry]
name = "igraph_ctypes"
version = "0.0.0.post58.dev0+4ca9643"
description = ""
authors = ["Tamas Nepusz <ntamas@gmail.com>"]
packages = [{ include = "igraph_ctypes", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
pycapi = ">=0.82.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
richbench = "^1.0.3"
igraph = "^0.10.6"
stimulus = { git = "https://github.com/igraph/stimulus.git", tag = "0.21.0" }
pytest-datadir = "^1.4.1"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.21"
mkdocstrings = { version = "^0.22.0", extras = ["python"] }

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry-dynamic-versioning.substitution]
files = ["src/igraph_ctypes/_version.py"]

[[tool.mypy.overrides]]
module = "igraph_ctypes._internal.wrappers"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov-config=.coveragerc"

[tool.ruff]
lint.ignore = ["F405"]
lint.select = ["B", "C", "E", "F", "W"]

[tool.ruff.lint.per-file-ignores]
"src/igraph_ctypes/_internal/enums.py" = ["E501"]
"src/igraph_ctypes/_internal/functions.py" = ["E501", "E741"]
"src/igraph_ctypes/_internal/lib.py" = ["E501"]

[tool.tox]
legacy_tox_ini = """
[tox]
min_version = 4.0
env_list = py311, py310, type

[gh-actions]
python =
    3.10: py310
    3.11: py311, type

[testenv]
deps =
    pytest
    pytest-cov
    pytest-datadir
commands = pytest tests

[testenv:type]
deps = mypy
commands = mypy src
"""

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
