[project]
name = "igraph_ctypes"
dynamic = ["version"]
description = ""
authors = [{ name = "Tamas Nepusz", email = "ntamas@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["numpy>=2.0.0"]

[dependency-groups]
dev = [
  "richbench>=1.0.3",
  "igraph>=0.10.6",
  "pytest>=7.2.1",
  "pytest-cov>=4.0.0",
  "pytest-datadir >= 1.4.1",
  "stimulus @ git+https://github.com/igraph/stimulus.git@0.23.1",
]
doc = ["mkdocs-material>=9.1.21", "mkdocstrings[python]>=0.22.0"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.hooks.version]
path = "src/igraph_ctypes/_version.py"
template = '''__version__ = "{version}"
'''

[tool.hatch.build.targets.sdist]
include = ["src/igraph_ctypes"]

[tool.hatch.build.targets.wheel]
packages = ["src/igraph_ctypes"]

[[tool.mypy.overrides]]
module = "igraph_ctypes._internal.wrappers"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov-config=.coveragerc"

[tool.ruff]
lint.ignore = ["F405"]
lint.select = ["B", "C", "E", "F", "W"]

[tool.ruff.lint.per-file-ignores]
"src/igraph_ctypes/_internal/enums.py" = ["E501"]
"src/igraph_ctypes/_internal/functions.py" = ["E501", "E741"]
"src/igraph_ctypes/_internal/lib.py" = ["E501"]

[tool.tox]
legacy_tox_ini = """
[tox]
min_version = 4.0
env_list = py313, py312, py311, py310, type

[gh-actions]
python =
    3.10: py310
    3.11: py311
    3.12: py312
    3.13: py313, type

[testenv]
deps =
    pytest
    pytest-cov
    pytest-datadir
commands = pytest tests

[testenv:type]
deps = mypy
commands = mypy src
"""

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"
